--- a/index.html
+++ b/index.html
@@ -721,12 +721,7 @@
             </tr>
             <tr>
               <th class="company_table_block_title">住所</th>
-              <td class="company_table_block_text">〒532-0004<br>大阪府大阪市淀川区西宮原１丁目６－60</td>
-            </tr>
-            <tr>
-              <th class="company_table_block_title">TEL</th>
-              <!-- Updated TEL field with provided phone number -->
-              <td class="company_table_block_text">080-9323-9031</td>
+              <td class="company_table_block_text">〒394-0004<br>長野県岡谷市神明町4-19-29</td>
             </tr>
             <tr>
               <th class="company_table_block_title">事業内容</th>
